--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -2,7 +2,7 @@
 /* On every page */
 body {
   background: rgb(241,242,193);
-  background: linear-gradient(180deg, rgba(242,230,193,1) 22%, rgba(235,212,111,1) 60%, rgba(242,202,82,1) 100%);
+  background: linear-gradient(180deg, #f3e8c8 22%, #f5d985 60%, #f5d061 100%);
     height: 100vh;
 }
 p, li{
@@ -17,12 +17,6 @@ a:link, a:visited {
 a:hover {
     text-decoration: underline;
 }
-h1 {
-    text-align: center;
-    padding: 3px;
-    border-top: 2px solid black;
-    border-bottom: 2px solid black;
-}
 
 @media (min-width: 200px){
   .card{
@@ -35,10 +29,17 @@ h1 {
     width:150px;
     float: left;
   }
-  img{
+  #bin{
     border: 3px solid #fbdd62;
+    margin-top: 20px;
     height: 170px;
     width: 110px;
+  }
+  #doodle{
+    height: 60px;
+    width: 125px;
+    margin-top: -15px;
+    padding-right: 10px;
   }
 }
 
@@ -52,7 +53,7 @@ h1 {
     width:200px;
     float: left;
   }
-  img{
+  #bin{
     border: 3px solid #fbdd62;
     height:256px;
     width:163px;
@@ -60,7 +61,36 @@ h1 {
     margin-bottom:10px;
     margin-left: -10px;
   }
+  #doodle{
+    height: 90px;
+    width: 185px;
+    display: inline-block;
+    float: left;
+    padding-right:40px;
+  }
 
+}
+
+.section{
+  display: inline-block;
+  background-color: #eddca9;
+  margin-bottom:5px;
+}
+
+.title{
+  color: #5f8144;
+  font-variant: small-caps;
+  font-size: 22px;
+  font-style: bold;
+  float: left;
+  margin-left: 15px;
+}
+
+.links{
+  float:right;
+  margin-right:40px;
+  font-size: 18px;
+  margin-top:4px;
 }
 
 .subtitle{
@@ -126,8 +156,9 @@ audio::-webkit-media-controls-play-button:hover{
 }
 
 #container3{
-  height: 70px;
+  height: 60px;
 }
+
 
 
 
