New Site New Me

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -20,7 +20,7 @@ a:hover {
 
 @media (min-width: 200px){
   .card{
-    min-width: 200px;
+    min-width: 350px;
     width: auto;
     height: auto;
   }
@@ -41,15 +41,19 @@ a:hover {
     margin-top: -15px;
     padding-right: 10px;
   }
+  #container5{
+    height: 260px;
+    width: 300px;
+  }
 }
 
 @media (min-width: 1000px) {
   .card{
-    min-width: 350px;
+    min-width: 700px;
     width: auto;
   }
   #container1{
-    height:300px;
+    height:200px;
     width:200px;
     float: left;
   }
@@ -59,7 +63,6 @@ a:hover {
     width:163px;
     margin-top:10px;
     margin-bottom:10px;
-    margin-left: -10px;
   }
   #doodle{
     height: 90px;
@@ -67,6 +70,10 @@ a:hover {
     display: inline-block;
     float: left;
     padding-right:40px;
+  }
+  #container5{
+    height: 200px;
+    width: 270px;
   }
 
 }
@@ -137,14 +144,28 @@ audio::-webkit-media-controls-play-button:hover{
   z-index: 1;
 }
 
-#columns{
-  float: right;
-  display: block;
+#column{
+  float: left;
+  display: inline-block;
   margin-left: -25px;
+}
+#column-2{
+  display: flex;
+  float: left;
+}
+
+div.columns:before{
+  content: "";
+  position: absolute;
+  right: 0;
+  top: 0;
+  height: 100px;
+  width: 50%;
+  border-right: 3px dashed #5f8144;
 }
 
 #container2, #container3{
-  height: 100px;
+  height: 120px;
   width: 200px;
   display: block;
   position: relative;
@@ -159,6 +180,77 @@ audio::-webkit-media-controls-play-button:hover{
   height: 60px;
 }
 
+#container5{
+  display: inline-block;
+  float: left;
+  margin-top: 5px;
+  margin-left: -10px;
+  font-size: 13px;
+}
+
+div.title{
+  float: left;
+  margin-top: -5px;
+}
+
+.ult{
+  float: left;
+  margin-left: 10px;
+  margin-top: 3px;
+  font-size: 15px;
+}
+
+.stan-info{
+  float: left;
+  text-align: left;
+  margin-left: 10px;
+}
+
+.lists{
+  float:left;
+  margin-top:auto;
+  width:250px;
+  display: inline-block;
+
+}
+
+.likes{
+  text-align: left;
+  margin-top: 10px;
+}
+
+#likes, #dislikes{
+  display: inline-flex;
+}
+
+#dislikes{
+  margin-top: -20px;
+}
+
+ul li {
+    margin-left: 20px; /* needed to preserve bullets */
+    column-break-inside: avoid; /* don't forget this */
+    page-break-inside: avoid;
+}
+ul {
+    list-style: outside disc;
+    padding-left: 0.3em;
+    column-width: 55px; /* actually the minimum width */
+}
+
+.text{
+  float:left;
+  text-align: left;
+  margin-left: 10px;
+}
+
+.basic-info{
+  text-align: left;
+  margin-right: 15px;
+  float:left;
+  color: #3f542f;
+  font-variant: small-caps;
+}
 
 
 
