--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -3,7 +3,8 @@
 body {
   background: rgb(241,242,193);
   background: linear-gradient(180deg, #f3e8c8 22%, #f5d985 60%, #f5d061 100%);
-    height: 100vh;
+  height: 100%;
+  background-attachment: fixed;
 }
 p, li{
     color: #2e3b24;
@@ -19,9 +20,12 @@ a:hover {
 }
 
 @media (min-width: 200px){
+  .main{
+      margin-top: 20%;
+  }
   .card{
     min-width: 350px;
-    max-width: 400px;
+    max-width: 96%;
     width: auto;
     height: auto;
   }
@@ -44,11 +48,14 @@ a:hover {
   }
   #container5{
     height: 260px;
-    width: 300px;
+    width: 270px;
   }
 }
 
 @media (min-width: 800px) {
+  .main{
+      margin-top: 20vh;
+  }
   .card{
     min-width: 300px;
     max-width: 100%;
@@ -125,7 +132,6 @@ audio::-webkit-media-controls-play-button:hover{
 }
 
 .main{
-  margin-top: 20vh;
   --alignment: center;
   --flex-alignment: center;
   align-items: center;
@@ -264,10 +270,11 @@ ul {
     text-align: center;
     display: inline-block;
     width: 100%;
+    height: 100%;
     font-size: 15px;
     font-style: italic;
     position: fixed;
-    padding: 3px;
+    margin-bottom:3px;
     color: #2d3e0d;
 }
 .footer a {
