--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -25,7 +25,7 @@ a:hover {
   }
   .card{
     min-width: 350px;
-    max-width: 96%;
+    max-width: 97%;
     width: auto;
     height: auto;
   }
@@ -51,8 +51,7 @@ a:hover {
     width: 300px;
   }
   .basic-info{
-    margin-left: -20px;
-    margin-right:5px;
+    margin-left: -30px;
   }
 }
 @media (min-width: 520px) {
@@ -226,6 +225,10 @@ div.title{
   float: left;
   text-align: left;
   margin-left: 10px;
+}
+
+.stan-list{
+  margin-right:-2px;
 }
 
 .lists{
